# 02-azure-ai-democase

./: CHANGES.md  README.md  generate_claim_pdfs.py
.github/workflows/: app-build.yml  app-reusable.yml  terraform-reusable.yml
bootstrap/: .gitignore  main.tf  terraform.tfstate  terraform.tfvars.sample
function-app/: check-ready.sh  claims_pipeline.py  deploy.sh  function_app.py  host.json  rag_chatbot.py  requirements.txt  shared.py
sample-data/claims-generator/: pyproject.toml
sample-data/claims-generator/generate_claims/: generate_claim_pdfs.py
search-setup/: requirements.txt  setup_search_index.py
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/: README.md
terraform/modules/ai-services/: main.tf  outputs.tf  variables.tf
terraform/modules/bot-service/: main.tf  outputs.tf  variables.tf
terraform/modules/document-intelligence/: main.tf  outputs.tf  variables.tf
terraform/modules/function-app/: main.tf  outputs.tf  variables.tf
terraform/modules/openai/: main.tf  outputs.tf  variables.tf
terraform/modules/search/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
